Improve error display on connection when no explicit message
- Add headers when testing admin pages
- Add Request body when testing connection
- Increase View coverage